Added laravel pulse and country list and change user status api.
