# routes/api-v1-admin.php
@@ -1,0 +1,9 @@
+<?php
+
+use App\Http\Controllers\Api\V1\Admin\UserStatusController;
+
+Route::group(['middleware' => 'auth:sanctum'], function () {
+    Route::post('users/{user}/change-status', UserStatusController::class);
+});
+
+
