# routes/api-v1.php
@@ -2,9 +2,11 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\Api\V1\AuthController;
+use App\Http\Controllers\Api\V1\CountryController;
 use App\Http\Controllers\Api\V1\UserController;
 use App\Http\Controllers\Api\V1\LanguageController;
 use App\Http\Controllers\Api\V1\SignedUrlController;
+use App\Http\Controllers\Api\V1\UserStatusController;
 
 Route::post('signup', [AuthController::class, 'signUp']);
 Route::post('login', [AuthController::class, 'login']);
@@ -22,3 +24,4 @@ Route::group(['middleware' => 'auth:sanctum'], function () {
 });
 
 Route::post('generate-signed-url', SignedUrlController::class);
+Route::apiResource('countries', CountryController::class)->only('index');
