# storage/api-docs/api-docs.json
@@ -5,6 +5,65 @@
         "version": "1.0.0"
     },
     "paths": {
+        "/api/v1/admin/users/{id}/change-status": {
+            "post": {
+                "tags": [
+                    "Admin / User"
+                ],
+                "summary": "Change user status",
+                "operationId": "changeStatus",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the user to update",
+                        "required": true
+                    },
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "description": "Custom header for XMLHttpRequest",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "XMLHttpRequest"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "required": [
+                                    "status"
+                                ],
+                                "properties": {
+                                    "status": {
+                                        "description": "New status of the user",
+                                        "type": "string"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Status updated successfully"
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    }
+                },
+                "security": [
+                    {
+                        "bearerAuth": []
+                    }
+                ]
+            }
+        },
         "/api/v1/signup": {
             "post": {
                 "tags": [
@@ -435,6 +494,57 @@
                         "bearerAuth": []
                     }
                 ]
+            }
+        },
+        "/api/v1/countries": {
+            "get": {
+                "tags": [
+                    "Country"
+                ],
+                "summary": "Country list",
+                "operationId": "countryList",
+                "parameters": [
+                    {
+                        "name": "X-Requested-With",
+                        "in": "header",
+                        "description": "Custom header for XMLHttpRequest",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "default": "XMLHttpRequest"
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Pagination limit, '-1' to get all data."
+                    },
+                    {
+                        "name": "filter[iso]",
+                        "in": "query"
+                    },
+                    {
+                        "name": "filter[iso3]",
+                        "in": "query"
+                    },
+                    {
+                        "name": "filter[name]",
+                        "in": "query"
+                    },
+                    {
+                        "name": "filter[numcode]",
+                        "in": "query"
+                    },
+                    {
+                        "name": "filter[phonecode]",
+                        "in": "query"
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Success"
+                    }
+                }
             }
         },
         "/api/v1/languages": {
